<resources>
    <string name="debug">true</string>
    <string name="account_no">设备ID</string>
    <string name="account_psw">设备密码</string>
    <string name="save_psw">记住密码</string>
    <string name="save_wifiConnectType">水表连接</string>
    <string name="login">登录</string>
    <string name="copyright">版权所有</string>
    <string name="connect">联系方式</string>
    <string name="txtVersion">Version</string>
    <string name="app_name">智能门</string>
    <string name="rtuAssiName">智能门控制系统</string>
    <string name="welcome">专业智能门制造商!</string>
    <string name="thirdPage">窗控制</string>
    <string name="secondPage">监控</string>
    <string name="fourPage">设置</string>
    <string name="mainPage">门控制</string>
    <string name="image_description">图片</string>
    <string name="menu_level_01">设备信息</string>
    <string name="menu_level_02">中心通信设置</string>
    <string name="menu_level_03">本地通信设置</string>
    <string name="menu_level_04">运行状况</string>
    <string name="menu_level_05">批量处理</string>
    <string name="menu_level_06">阀控设置</string>
     <string name="connect_type">类型选择：</string>
    <string name="wifi_ip1">10</string>
    <string name="wifi_ip2">10</string>
    <string name="wifi_ip3">100</string>
    <string name="wifi_ip4">254</string>
    <string name="wifi_port">8899</string>
    <string name="result_datetime">收到应答时刻</string>
    <string name="func_01_010">门出厂编号和密码</string>
    <string name="func_01_010_item1">门出厂编号</string>
    <string name="func_01_010_item2">密码</string>
    <string name="func_01_010_item3">地址</string>
    <string name="func_01_020">时钟</string>
    <string name="func_01_020_item1">手机时钟</string>
    <string name="func_01_020_item2">设置时钟</string>
    <string name="func_01_020_item3">设备时钟</string>
    <string name="func_01_030">终端工作模式</string>
    <string name="func_01_030_item1">工作模式</string>
    <string name="func_01_040">查询版本号</string>
    <string name="func_01_040_item1">硬件版本</string>
    <string name="func_01_040_item2">软件版本</string>
    <string name="func_01_050">复位/恢复出厂设置</string>
    <string name="func_01_050_item1">复位类型</string>
    <string name="func_01_060">清空数据</string>
    <string name="func_01_060_item1">清空单元</string>
    <string name="func_01_070">查询电池电压</string>
    <string name="func_01_070_item1">供电方式</string>
    <string name="func_01_070_item2">电压</string>
    <string name="func_01_080">电池电压报警值</string>
    <string name="func_01_080_item1">报警数值</string>
    <string name="func_01_090">查询出厂编号</string>
    <string name="func_01_090_item1">出厂编号</string>
    <string name="func_01_100">终端地址</string>
    <string name="func_01_100_item1">行政区编号</string>
    <string name="func_01_100_item2">设备编号</string>
    <string name="func_01_100_item3">终端列表</string>
    <string name="func_01_100_item4">Modbus地址</string>
    <string name="func_02_010">DTU工作模式</string>
    <string name="func_02_010_item1">工作模式</string>
    <string name="func_02_020">终端心跳周期</string>
    <string name="func_02_020_item1">心跳周期</string>
    <string name="func_02_030">终端主备通道</string>
    <string name="func_02_030_item1">主通道</string>
    <string name="func_02_030_item2">备用通道1</string>
    <string name="func_02_030_item3">备用通道2</string>
    <string name="func_02_040">GPRS接入点</string>
    <string name="func_02_040_item1">接入点名称</string>
    <string name="func_02_040_item1_1">cmnet</string>
    <string name="func_02_040_item2">接入点用户</string>
    <string name="func_02_040_item2_1">abc</string>
    <string name="func_02_040_item3">接入点密码</string>
    <string name="func_02_040_item3_1">123456</string>
    <string name="func_02_050">中心IP地址</string>
    <string name="func_02_050_item1">中心一</string>
    <string name="func_02_050_item1_1">是否有效</string>
    <string name="func_02_050_item1_2">IP地址</string>
    <string name="func_02_050_item1_3">端口</string>
    <string name="func_02_050_item1_4">通信方式</string>
    <string name="func_02_050_item2">中心二</string>
    <string name="func_02_050_item2_1">是否有效</string>
    <string name="func_02_050_item2_2">IP地址</string>
    <string name="func_02_050_item2_3">端口</string>
    <string name="func_02_050_item2_4">通信方式</string>
    <string name="func_02_050_item3">中心三</string>
    <string name="func_02_050_item3_1">是否有效</string>
    <string name="func_02_050_item3_2">IP地址</string>
    <string name="func_02_050_item3_3">端口</string>
    <string name="func_02_050_item3_4">通信方式</string>
    <string name="func_02_050_item4">中心四</string>
    <string name="func_02_050_item4_1">是否有效</string>
    <string name="func_02_050_item4_2">IP地址</string>
    <string name="func_02_050_item4_3">端口</string>
    <string name="func_02_050_item4_4">通信方式</string>
    <string name="func_02_060">短信中心</string>
    <string name="func_02_060_item1">中心一</string>
    <string name="func_02_060_item1_1">是否有效</string>
    <string name="func_02_060_item1_2">电话号码</string>
    <string name="func_02_060_item2">中心二</string>
    <string name="func_02_060_item2_1">是否有效</string>
    <string name="func_02_060_item2_2">电话号码</string>
    <string name="func_02_060_item3">中心三</string>
    <string name="func_02_060_item3_1">是否有效</string>
    <string name="func_02_060_item3_2">电话号码</string>
    <string name="func_02_060_item4">中心四</string>
    <string name="func_02_060_item4_1">是否有效</string>
    <string name="func_02_060_item4_2">电话号码</string>
    <string name="func_02_070">卫星中心</string>
    <string name="func_02_070_item1">中心一</string>
    <string name="func_02_070_item1_1">是否有效</string>
    <string name="func_02_070_item1_2">中心号码</string>
    <string name="func_02_070_item2">中心二</string>
    <string name="func_02_070_item2_1">是否有效</string>
    <string name="func_02_070_item2_2">中心号码</string>
    <string name="func_02_070_item3">中心三</string>
    <string name="func_02_070_item3_1">是否有效</string>
    <string name="func_02_070_item3_2">中心号码</string>
    <string name="func_02_070_item4">中心四</string>
    <string name="func_02_070_item4_1">是否有效</string>
    <string name="func_02_070_item4_2">中心号码</string>
    <string name="func_02_080">修改终端密码</string>
    <string name="func_02_080_item1">密码</string>
    <string name="func_02_090">终端在线状态</string>
    <string name="func_02_090_item01">网络中心1</string>
    <string name="func_02_090_item02">网络中心2</string>
    <string name="func_02_090_item03">网络中心3</string>
    <string name="func_02_090_item04">网络中心4</string>
    <string name="func_02_090_item05">DTU信强</string>
    <string name="func_02_090_item06">Wifi状态</string>
    <string name="func_02_090_item07">Wifi参数</string>
    <string name="func_02_090_item08">卫星中心1</string>
    <string name="func_02_090_item09">卫星中心2</string>
    <string name="func_02_090_item10">卫星中心3</string>
    <string name="func_02_090_item11">卫星中心4</string>
    <string name="func_02_090_item12">卫星信强</string>
    <string name="func_02_100">查询SIM卡ID</string>
    <string name="func_02_100_item1">SIM卡ID</string>
    <string name="func_02_110">上报协议配置</string>
    <string name="func_02_110_item1">功能码D0是否开启</string>
    <string name="func_02_110_item2">定时报协议选择</string>
    <string name="func_02_110_item3">上报累计值类型</string>
    <string name="func_02_110_item4">功能码C0累计值是否上报</string>
    <string name="func_02_110_item5">功能码C0瞬时流量是否上报</string>
    <string name="func_03_010">电源采集校准系数</string>
    <string name="func_03_010_item1">电池电源</string>
    <string name="func_03_010_item1_1">是否有效</string>
    <string name="func_03_010_item1_2">校准系数</string>
    <string name="func_03_010_item2">外部电源</string>
    <string name="func_03_010_item2_1">是否有效</string>
    <string name="func_03_010_item2_2">校准系数</string>
    <string name="func_03_011">AD校准命令</string>
    <string name="func_03_011_item1">类型</string>
    <string name="func_03_011_item2">通道</string>
    <string name="func_03_011_item3">校准电压值</string>
    <string name="func_03_020">仪表类型</string>
    <string name="func_03_020_item1">水位仪表</string>
    <string name="func_03_020_item1_1">是否有效</string>
    <string name="func_03_020_item1_2">仪表种类</string>
    <string name="func_03_020_item2">水质仪表</string>
    <string name="func_03_020_item2_1">是否有效</string>
    <string name="func_03_020_item2_2">仪表种类</string>
    <string name="func_03_020_item3">水温仪表</string>
    <string name="func_03_020_item3_1">是否有效</string>
    <string name="func_03_020_item3_2">仪表种类</string>
    <string name="func_03_020_item4">流量仪表1</string>
    <string name="func_03_020_item4_1">是否有效</string>
    <string name="func_03_020_item4_2">仪表种类</string>
    <string name="func_03_020_item5">流量仪表2</string>
    <string name="func_03_020_item5_1">是否有效</string>
    <string name="func_03_020_item5_2">仪表种类</string>
    <string name="func_03_020_item6">流量仪表3</string>
    <string name="func_03_020_item6_1">是否有效</string>
    <string name="func_03_020_item6_2">仪表种类</string>
    <string name="func_03_020_item7">仪表种类设置</string>
    <string name="func_03_030">仪表量程</string>
    <string name="func_03_030_item1">水位仪表</string>
    <string name="func_03_030_item1_1">是否有效</string>
    <string name="func_03_030_item1_2">仪表量程</string>
    <string name="func_03_030_item2">水质仪表</string>
    <string name="func_03_030_item2_1">是否有效</string>
    <string name="func_03_030_item2_2">仪表量程</string>
    <string name="func_03_030_item3">水温仪表</string>
    <string name="func_03_030_item3_1">是否有效</string>
    <string name="func_03_030_item3_2">仪表量程</string>
    <string name="func_03_030_item4">流量仪表1</string>
    <string name="func_03_030_item4_1">是否有效</string>
    <string name="func_03_030_item4_2">仪表量程</string>
    <string name="func_03_030_item5">流量仪表2</string>
    <string name="func_03_030_item5_1">是否有效</string>
    <string name="func_03_030_item5_2">仪表量程</string>
    <string name="func_03_030_item6">流量仪表3</string>
    <string name="func_03_030_item6_1">是否有效</string>
    <string name="func_03_030_item6_2">仪表量程</string>
    <string name="func_03_040">仪表采集修正值</string>
    <string name="func_03_040_item1">水位仪表</string>
    <string name="func_03_040_item1_1">是否有效</string>
    <string name="func_03_040_item1_2">仪表修正值</string>
    <string name="func_03_050">仪表AD采集校准值</string>
    <string name="func_03_050_item1">1路AD</string>
    <string name="func_03_050_item1_1">是否有效</string>
    <string name="func_03_050_item1_2">校准系数</string>
    <string name="func_03_050_item2">2路AD</string>
    <string name="func_03_050_item2_1">是否有效</string>
    <string name="func_03_050_item2_2">校准系数</string>
    <string name="func_03_050_item3">3路AD</string>
    <string name="func_03_050_item3_1">是否有效</string>
    <string name="func_03_050_item3_2">校准系数</string>
    <string name="func_03_050_item4">4路AD</string>
    <string name="func_03_050_item4_1">是否有效</string>
    <string name="func_03_050_item4_2">校准系数</string>
    <string name="func_03_060">仪表上电读值延时时间</string>
    <string name="func_03_060_item1">延时时间</string>
    <string name="func_03_070">井口高程、水井深度、探头埋深</string>
    <string name="func_03_070_item1">井口高程</string>
    <string name="func_03_070_item1_1">是否有效</string>
    <string name="func_03_070_item1_2">井口高程</string>
    <string name="func_03_070_item2">水井深度</string>
    <string name="func_03_070_item2_1">是否有效</string>
    <string name="func_03_070_item2_2">水井深度</string>
    <string name="func_03_070_item3">探头埋深</string>
    <string name="func_03_070_item3_1">是否有效</string>
    <string name="func_03_070_item3_2">探头埋深</string>
    <string name="func_03_080">数据采集种类及时间间隔</string>
    <string name="func_03_080_item01">雨量数据</string>
    <string name="func_03_080_item02">水位数据</string>
    <string name="func_03_080_item03">流量(水量)</string>
    <string name="func_03_080_item04">流速数据</string>
    <string name="func_03_080_item05">闸位数据</string>
    <string name="func_05_070">查询实时流量</string>
    <string name="func_05_070_item01">瞬时流量</string>
	<string name="func_05_070_item02">累计水量</string>
    <string name="func_item_unit_m">(米)</string>
    <string name="func_item_unit_m3_1">(m³)</string>
    <string name="func_item_unit_m3perh">(m³/h)</string>
    <string name="func_item_unit_du">(°C)</string>
</resources>