<?xml version="1.0" encoding="utf-8"?>
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/func_out_linearlayout_style" >

	<!-- start 头部标题 --> 
	<LinearLayout style="@style/func_title_linearlayout_style">
	    <TextView
	    	android:id="@+id/f_05_070_Title"
	        android:drawableLeft="@drawable/item005"
	        android:text="@string/func_05_070"
			style="@style/func_title_viewtext_style"/>
	    
	    <!-- 注释掉，以备用，若应用并显示在界面上时，要调整上面textView的宽度（如300dp） 
	    <ImageView 
	        android:id="@+id/commandStatus"
	        style="@style/func_itemtitle_imageview_style"
	        android:contentDescription="@string/txtBtn"/>
	    -->
	</LinearLayout>  
	
    
    <!-- start 具体内布局 -->
    <FrameLayout
    	android:id="@+id/f_05_070_Frm"
		style="@style/func_framelayout_style">
    
		 <!-- start 具体内容 -->
		 <LinearLayout 
	        style="@style/func_linearlayout_style">
	        
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/common_line_height40"
			    >
			    <TextView
			        android:text="@string/func_05_070_item01"
			    	style="@style/func_item_viewtext_style_100_a"/>
			    <!-- 新版本SDK要求填写属性lableFor,类似于填写一个ID来绑定这个控件，否则警告 -->
			    <TextView
					android:id="@+id/func_05_070_item01"  
					android:labelFor="@id/func_05_070_item01" 
				    style="@style/func_item_edittext_style_120"/>
			    <TextView
				        android:text="@string/func_item_unit_m3perh"
				        style="@style/func_item_viewtext_style_unit_100"/>
			</LinearLayout>
						
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/common_line_height40"
			    >
			    <TextView
			        android:text="@string/func_05_070_item02"
			    	style="@style/func_item_viewtext_style_100_a"/>
			    <!-- 新版本SDK要求填写属性lableFor,类似于填写一个ID来绑定这个控件，否则警告 -->
			    <TextView
					android:id="@+id/func_05_070_item02"  
					android:labelFor="@id/func_05_070_item02" 
				    style="@style/func_item_edittext_style_120"/>
			    <TextView
				    android:text="@string/func_item_unit_m3_1"
				    style="@style/func_item_viewtext_style_unit_100"/>
			</LinearLayout>
						
			 <include layout="@layout/show_btn_query" /> 
		 </LinearLayout>
	     
		 <!-- start 底部 -->
		 <LinearLayout 
	        android:id="@+id/f_05_070_Load"
	        style="@style/func_progressbar_linearlayout_style" >
		    <ProgressBar
		        style="@style/func_progressbar_style" />
		 </LinearLayout>
	</FrameLayout>
</LinearLayout>

